[package]
name = "modx"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A way to handle states with structs in Dioxus inspired by mobx"
repository = "https://github.com/tkr-sh/modx"
documentation = "https://github.com/tkr-sh/modx"
readme = "README.md"
keywords = ["dioxus", "wasm", "state", "mobx", "redux"]
categories = ["web-programming", "wasm", "gui", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.58", features = ["full"] }

[dev-dependencies]
dioxus = { version = "0.5.1", features = ["desktop"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
tokio = { version = "1", features = ["full"]}

[lib]
proc-macro = true
