[package]
name = "modx"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A way to handle states with structs in Dioxus inspired by mobx"
repository = "https://github.com/tkr-sh/modx"
documentation = "https://docs.rs/modx/latest/modx/index.html"
readme = "README.md"
keywords = ["dioxus", "wasm", "state", "mobx", "redux"]
categories = ["web-programming", "wasm", "gui", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
proc-macro = true
